# Configs

./: LICENSE.md  README.md
python/: flake8.toml  poetry.toml  pyproject.toml
zsh/: .zshrc  KleoHasani.zsh-theme  README.md
